scanner/parser.output
Terminals unused in grammar

    TK_ERRO


Grammar

    0 $accept: program $end

    1 program: ε
    2        | program element

    3 element: function
    4        | global_declaration

    5 global_declaration: type list_vars ';'

    6 type: TK_PR_INT
    7     | TK_PR_FLOAT
    8     | TK_PR_BOOL

    9 list_vars: TK_IDENTIFICADOR
   10          | list_vars ',' TK_IDENTIFICADOR

   11 function: header body

   12 header: '(' param_list ')' TK_OC_GE type '!' function_name
   13       | '(' ')' TK_OC_GE type '!' TK_IDENTIFICADOR

   14 function_name: TK_IDENTIFICADOR

   15 param_list: param
   16           | param_list ',' param

   17 param: type TK_IDENTIFICADOR

   18 body: '{' '}'
   19     | '{' command_list '}'

   20 command_list: command
   21             | command_list command

   22 command: local_var_dec ';'
   23        | attrib ';'
   24        | conditional ';'
   25        | while ';'
   26        | return ';'
   27        | function_call ';'

   28 local_var_dec: type list_vars

   29 attrib: TK_IDENTIFICADOR '=' expr

   30 function_call: TK_IDENTIFICADOR '(' arg_list ')'
   31              | TK_IDENTIFICADOR '(' ')'

   32 arg_list: arg
   33         | arg_list ',' arg

   34 arg: expr

   35 return: TK_PR_RETURN expr

   36 conditional: TK_PR_IF '(' expr ')' '{' command_list '}'
   37            | TK_PR_IF '(' expr ')' '{' command_list '}' TK_PR_ELSE '{' command_list '}'

   38 while: TK_PR_WHILE '(' expr ')' '{' command_list '}'

   39 expr: logical_or_expr

   40 logical_or_expr: logical_and_expr
   41                | logical_or_expr TK_OC_OR logical_and_expr

   42 logical_and_expr: equality_expr
   43                 | logical_and_expr TK_OC_AND equality_expr

   44 equality_expr: relational_expr
   45              | equality_expr TK_OC_EQ relational_expr
   46              | equality_expr TK_OC_NE relational_expr

   47 relational_expr: add_sub_expr
   48                | relational_expr '<' add_sub_expr
   49                | relational_expr '>' add_sub_expr
   50                | relational_expr TK_OC_LE add_sub_expr
   51                | relational_expr TK_OC_GE add_sub_expr

   52 add_sub_expr: mult_div_mod_expr
   53             | add_sub_expr '+' mult_div_mod_expr
   54             | add_sub_expr '-' mult_div_mod_expr

   55 mult_div_mod_expr: unary_expr
   56                  | mult_div_mod_expr '*' unary_expr
   57                  | mult_div_mod_expr '/' unary_expr
   58                  | mult_div_mod_expr '%' unary_expr

   59 unary_expr: primary_expr
   60           | '-' primary_expr
   61           | '!' primary_expr

   62 primary_expr: TK_IDENTIFICADOR
   63             | TK_LIT_INT
   64             | TK_LIT_FLOAT
   65             | TK_LIT_TRUE
   66             | TK_LIT_FALSE
   67             | function_call
   68             | '(' expr ')'


Terminals, with rules where they appear

    $end (0) 0
    '!' (33) 12 13 61
    '%' (37) 58
    '(' (40) 12 13 30 31 36 37 38 68
    ')' (41) 12 13 30 31 36 37 38 68
    '*' (42) 56
    '+' (43) 53
    ',' (44) 10 16 33
    '-' (45) 54 60
    '/' (47) 57
    ';' (59) 5 22 23 24 25 26 27
    '<' (60) 48
    '=' (61) 29
    '>' (62) 49
    '{' (123) 18 19 36 37 38
    '}' (125) 18 19 36 37 38
    error (256)
    UMINUS (258)
    TK_PR_INT (259) 6
    TK_PR_FLOAT (260) 7
    TK_PR_BOOL (261) 8
    TK_PR_IF (262) 36 37
    TK_PR_ELSE (263) 37
    TK_PR_WHILE (264) 38
    TK_PR_RETURN (265) 35
    TK_OC_LE (266) 50
    TK_OC_GE (267) 12 13 51
    TK_OC_EQ (268) 45
    TK_OC_NE (269) 46
    TK_OC_AND (270) 43
    TK_OC_OR (271) 41
    TK_IDENTIFICADOR (272) 9 10 13 14 17 29 30 31 62
    TK_LIT_INT (273) 63
    TK_LIT_FLOAT (274) 64
    TK_LIT_FALSE (275) 66
    TK_LIT_TRUE (276) 65
    TK_ERRO (277)


Nonterminals, with rules where they appear

    $accept (38)
        on left: 0
    program (39)
        on left: 1 2
        on right: 0 2
    element (40)
        on left: 3 4
        on right: 2
    global_declaration (41)
        on left: 5
        on right: 4
    type (42)
        on left: 6 7 8
        on right: 5 12 13 17 28
    list_vars (43)
        on left: 9 10
        on right: 5 10 28
    function (44)
        on left: 11
        on right: 3
    header (45)
        on left: 12 13
        on right: 11
    function_name (46)
        on left: 14
        on right: 12
    param_list (47)
        on left: 15 16
        on right: 12 16
    param (48)
        on left: 17
        on right: 15 16
    body (49)
        on left: 18 19
        on right: 11
    command_list (50)
        on left: 20 21
        on right: 19 21 36 37 38
    command (51)
        on left: 22 23 24 25 26 27
        on right: 20 21
    local_var_dec (52)
        on left: 28
        on right: 22
    attrib (53)
        on left: 29
        on right: 23
    function_call (54)
        on left: 30 31
        on right: 27 67
    arg_list (55)
        on left: 32 33
        on right: 30 33
    arg (56)
        on left: 34
        on right: 32 33
    return (57)
        on left: 35
        on right: 26
    conditional (58)
        on left: 36 37
        on right: 24
    while (59)
        on left: 38
        on right: 25
    expr (60)
        on left: 39
        on right: 29 34 35 36 37 38 68
    logical_or_expr (61)
        on left: 40 41
        on right: 39 41
    logical_and_expr (62)
        on left: 42 43
        on right: 40 41 43
    equality_expr (63)
        on left: 44 45 46
        on right: 42 43 45 46
    relational_expr (64)
        on left: 47 48 49 50 51
        on right: 44 45 46 48 49 50 51
    add_sub_expr (65)
        on left: 52 53 54
        on right: 47 48 49 50 51 53 54
    mult_div_mod_expr (66)
        on left: 55 56 57 58
        on right: 52 53 54 56 57 58
    unary_expr (67)
        on left: 59 60 61
        on right: 55 56 57 58
    primary_expr (68)
        on left: 62 63 64 65 66 67 68
        on right: 59 60 61


State 0

    0 $accept: • program $end

    $default  reduce using rule 1 (program)

    program  go to state 1


State 1

    0 $accept: program • $end
    2 program: program • element

    $end         shift, and go to state 2
    TK_PR_INT    shift, and go to state 3
    TK_PR_FLOAT  shift, and go to state 4
    TK_PR_BOOL   shift, and go to state 5
    '('          shift, and go to state 6

    element             go to state 7
    global_declaration  go to state 8
    type                go to state 9
    function            go to state 10
    header              go to state 11


State 2

    0 $accept: program $end •

    $default  accept


State 3

    6 type: TK_PR_INT •

    $default  reduce using rule 6 (type)


State 4

    7 type: TK_PR_FLOAT •

    $default  reduce using rule 7 (type)


State 5

    8 type: TK_PR_BOOL •

    $default  reduce using rule 8 (type)


State 6

   12 header: '(' • param_list ')' TK_OC_GE type '!' function_name
   13       | '(' • ')' TK_OC_GE type '!' TK_IDENTIFICADOR

    TK_PR_INT    shift, and go to state 3
    TK_PR_FLOAT  shift, and go to state 4
    TK_PR_BOOL   shift, and go to state 5
    ')'          shift, and go to state 12

    type        go to state 13
    param_list  go to state 14
    param       go to state 15


State 7

    2 program: program element •

    $default  reduce using rule 2 (program)


State 8

    4 element: global_declaration •

    $default  reduce using rule 4 (element)


State 9

    5 global_declaration: type • list_vars ';'

    TK_IDENTIFICADOR  shift, and go to state 16

    list_vars  go to state 17


State 10

    3 element: function •

    $default  reduce using rule 3 (element)


State 11

   11 function: header • body

    '{'  shift, and go to state 18

    body  go to state 19


State 12

   13 header: '(' ')' • TK_OC_GE type '!' TK_IDENTIFICADOR

    TK_OC_GE  shift, and go to state 20


State 13

   17 param: type • TK_IDENTIFICADOR

    TK_IDENTIFICADOR  shift, and go to state 21


State 14

   12 header: '(' param_list • ')' TK_OC_GE type '!' function_name
   16 param_list: param_list • ',' param

    ','  shift, and go to state 22
    ')'  shift, and go to state 23


State 15

   15 param_list: param •

    $default  reduce using rule 15 (param_list)


State 16

    9 list_vars: TK_IDENTIFICADOR •

    $default  reduce using rule 9 (list_vars)


State 17

    5 global_declaration: type list_vars • ';'
   10 list_vars: list_vars • ',' TK_IDENTIFICADOR

    ';'  shift, and go to state 24
    ','  shift, and go to state 25


State 18

   18 body: '{' • '}'
   19     | '{' • command_list '}'

    TK_PR_INT         shift, and go to state 3
    TK_PR_FLOAT       shift, and go to state 4
    TK_PR_BOOL        shift, and go to state 5
    TK_PR_IF          shift, and go to state 26
    TK_PR_WHILE       shift, and go to state 27
    TK_PR_RETURN      shift, and go to state 28
    TK_IDENTIFICADOR  shift, and go to state 29
    '}'               shift, and go to state 30

    type           go to state 31
    command_list   go to state 32
    command        go to state 33
    local_var_dec  go to state 34
    attrib         go to state 35
    function_call  go to state 36
    return         go to state 37
    conditional    go to state 38
    while          go to state 39


State 19

   11 function: header body •

    $default  reduce using rule 11 (function)


State 20

   13 header: '(' ')' TK_OC_GE • type '!' TK_IDENTIFICADOR

    TK_PR_INT    shift, and go to state 3
    TK_PR_FLOAT  shift, and go to state 4
    TK_PR_BOOL   shift, and go to state 5

    type  go to state 40


State 21

   17 param: type TK_IDENTIFICADOR •

    $default  reduce using rule 17 (param)


State 22

   16 param_list: param_list ',' • param

    TK_PR_INT    shift, and go to state 3
    TK_PR_FLOAT  shift, and go to state 4
    TK_PR_BOOL   shift, and go to state 5

    type   go to state 13
    param  go to state 41


State 23

   12 header: '(' param_list ')' • TK_OC_GE type '!' function_name

    TK_OC_GE  shift, and go to state 42


State 24

    5 global_declaration: type list_vars ';' •

    $default  reduce using rule 5 (global_declaration)


State 25

   10 list_vars: list_vars ',' • TK_IDENTIFICADOR

    TK_IDENTIFICADOR  shift, and go to state 43


State 26

   36 conditional: TK_PR_IF • '(' expr ')' '{' command_list '}'
   37            | TK_PR_IF • '(' expr ')' '{' command_list '}' TK_PR_ELSE '{' command_list '}'

    '('  shift, and go to state 44


State 27

   38 while: TK_PR_WHILE • '(' expr ')' '{' command_list '}'

    '('  shift, and go to state 45


State 28

   35 return: TK_PR_RETURN • expr

    TK_IDENTIFICADOR  shift, and go to state 46
    TK_LIT_INT        shift, and go to state 47
    TK_LIT_FLOAT      shift, and go to state 48
    TK_LIT_FALSE      shift, and go to state 49
    TK_LIT_TRUE       shift, and go to state 50
    '('               shift, and go to state 51
    '!'               shift, and go to state 52
    '-'               shift, and go to state 53

    function_call      go to state 54
    expr               go to state 55
    logical_or_expr    go to state 56
    logical_and_expr   go to state 57
    equality_expr      go to state 58
    relational_expr    go to state 59
    add_sub_expr       go to state 60
    mult_div_mod_expr  go to state 61
    unary_expr         go to state 62
    primary_expr       go to state 63


State 29

   29 attrib: TK_IDENTIFICADOR • '=' expr
   30 function_call: TK_IDENTIFICADOR • '(' arg_list ')'
   31              | TK_IDENTIFICADOR • '(' ')'

    '('  shift, and go to state 64
    '='  shift, and go to state 65


State 30

   18 body: '{' '}' •

    $default  reduce using rule 18 (body)


State 31

   28 local_var_dec: type • list_vars

    TK_IDENTIFICADOR  shift, and go to state 16

    list_vars  go to state 66


State 32

   19 body: '{' command_list • '}'
   21 command_list: command_list • command

    TK_PR_INT         shift, and go to state 3
    TK_PR_FLOAT       shift, and go to state 4
    TK_PR_BOOL        shift, and go to state 5
    TK_PR_IF          shift, and go to state 26
    TK_PR_WHILE       shift, and go to state 27
    TK_PR_RETURN      shift, and go to state 28
    TK_IDENTIFICADOR  shift, and go to state 29
    '}'               shift, and go to state 67

    type           go to state 31
    command        go to state 68
    local_var_dec  go to state 34
    attrib         go to state 35
    function_call  go to state 36
    return         go to state 37
    conditional    go to state 38
    while          go to state 39


State 33

   20 command_list: command •

    $default  reduce using rule 20 (command_list)


State 34

   22 command: local_var_dec • ';'

    ';'  shift, and go to state 69


State 35

   23 command: attrib • ';'

    ';'  shift, and go to state 70


State 36

   27 command: function_call • ';'

    ';'  shift, and go to state 71


State 37

   26 command: return • ';'

    ';'  shift, and go to state 72


State 38

   24 command: conditional • ';'

    ';'  shift, and go to state 73


State 39

   25 command: while • ';'

    ';'  shift, and go to state 74


State 40

   13 header: '(' ')' TK_OC_GE type • '!' TK_IDENTIFICADOR

    '!'  shift, and go to state 75


State 41

   16 param_list: param_list ',' param •

    $default  reduce using rule 16 (param_list)


State 42

   12 header: '(' param_list ')' TK_OC_GE • type '!' function_name

    TK_PR_INT    shift, and go to state 3
    TK_PR_FLOAT  shift, and go to state 4
    TK_PR_BOOL   shift, and go to state 5

    type  go to state 76


State 43

   10 list_vars: list_vars ',' TK_IDENTIFICADOR •

    $default  reduce using rule 10 (list_vars)


State 44

   36 conditional: TK_PR_IF '(' • expr ')' '{' command_list '}'
   37            | TK_PR_IF '(' • expr ')' '{' command_list '}' TK_PR_ELSE '{' command_list '}'

    TK_IDENTIFICADOR  shift, and go to state 46
    TK_LIT_INT        shift, and go to state 47
    TK_LIT_FLOAT      shift, and go to state 48
    TK_LIT_FALSE      shift, and go to state 49
    TK_LIT_TRUE       shift, and go to state 50
    '('               shift, and go to state 51
    '!'               shift, and go to state 52
    '-'               shift, and go to state 53

    function_call      go to state 54
    expr               go to state 77
    logical_or_expr    go to state 56
    logical_and_expr   go to state 57
    equality_expr      go to state 58
    relational_expr    go to state 59
    add_sub_expr       go to state 60
    mult_div_mod_expr  go to state 61
    unary_expr         go to state 62
    primary_expr       go to state 63


State 45

   38 while: TK_PR_WHILE '(' • expr ')' '{' command_list '}'

    TK_IDENTIFICADOR  shift, and go to state 46
    TK_LIT_INT        shift, and go to state 47
    TK_LIT_FLOAT      shift, and go to state 48
    TK_LIT_FALSE      shift, and go to state 49
    TK_LIT_TRUE       shift, and go to state 50
    '('               shift, and go to state 51
    '!'               shift, and go to state 52
    '-'               shift, and go to state 53

    function_call      go to state 54
    expr               go to state 78
    logical_or_expr    go to state 56
    logical_and_expr   go to state 57
    equality_expr      go to state 58
    relational_expr    go to state 59
    add_sub_expr       go to state 60
    mult_div_mod_expr  go to state 61
    unary_expr         go to state 62
    primary_expr       go to state 63


State 46

   30 function_call: TK_IDENTIFICADOR • '(' arg_list ')'
   31              | TK_IDENTIFICADOR • '(' ')'
   62 primary_expr: TK_IDENTIFICADOR •

    '('  shift, and go to state 64

    $default  reduce using rule 62 (primary_expr)


State 47

   63 primary_expr: TK_LIT_INT •

    $default  reduce using rule 63 (primary_expr)


State 48

   64 primary_expr: TK_LIT_FLOAT •

    $default  reduce using rule 64 (primary_expr)


State 49

   66 primary_expr: TK_LIT_FALSE •

    $default  reduce using rule 66 (primary_expr)


State 50

   65 primary_expr: TK_LIT_TRUE •

    $default  reduce using rule 65 (primary_expr)


State 51

   68 primary_expr: '(' • expr ')'

    TK_IDENTIFICADOR  shift, and go to state 46
    TK_LIT_INT        shift, and go to state 47
    TK_LIT_FLOAT      shift, and go to state 48
    TK_LIT_FALSE      shift, and go to state 49
    TK_LIT_TRUE       shift, and go to state 50
    '('               shift, and go to state 51
    '!'               shift, and go to state 52
    '-'               shift, and go to state 53

    function_call      go to state 54
    expr               go to state 79
    logical_or_expr    go to state 56
    logical_and_expr   go to state 57
    equality_expr      go to state 58
    relational_expr    go to state 59
    add_sub_expr       go to state 60
    mult_div_mod_expr  go to state 61
    unary_expr         go to state 62
    primary_expr       go to state 63


State 52

   61 unary_expr: '!' • primary_expr

    TK_IDENTIFICADOR  shift, and go to state 46
    TK_LIT_INT        shift, and go to state 47
    TK_LIT_FLOAT      shift, and go to state 48
    TK_LIT_FALSE      shift, and go to state 49
    TK_LIT_TRUE       shift, and go to state 50
    '('               shift, and go to state 51

    function_call  go to state 54
    primary_expr   go to state 80


State 53

   60 unary_expr: '-' • primary_expr

    TK_IDENTIFICADOR  shift, and go to state 46
    TK_LIT_INT        shift, and go to state 47
    TK_LIT_FLOAT      shift, and go to state 48
    TK_LIT_FALSE      shift, and go to state 49
    TK_LIT_TRUE       shift, and go to state 50
    '('               shift, and go to state 51

    function_call  go to state 54
    primary_expr   go to state 81


State 54

   67 primary_expr: function_call •

    $default  reduce using rule 67 (primary_expr)


State 55

   35 return: TK_PR_RETURN expr •

    $default  reduce using rule 35 (return)


State 56

   39 expr: logical_or_expr •
   41 logical_or_expr: logical_or_expr • TK_OC_OR logical_and_expr

    TK_OC_OR  shift, and go to state 82

    $default  reduce using rule 39 (expr)


State 57

   40 logical_or_expr: logical_and_expr •
   43 logical_and_expr: logical_and_expr • TK_OC_AND equality_expr

    TK_OC_AND  shift, and go to state 83

    $default  reduce using rule 40 (logical_or_expr)


State 58

   42 logical_and_expr: equality_expr •
   45 equality_expr: equality_expr • TK_OC_EQ relational_expr
   46              | equality_expr • TK_OC_NE relational_expr

    TK_OC_EQ  shift, and go to state 84
    TK_OC_NE  shift, and go to state 85

    $default  reduce using rule 42 (logical_and_expr)


State 59

   44 equality_expr: relational_expr •
   48 relational_expr: relational_expr • '<' add_sub_expr
   49                | relational_expr • '>' add_sub_expr
   50                | relational_expr • TK_OC_LE add_sub_expr
   51                | relational_expr • TK_OC_GE add_sub_expr

    TK_OC_LE  shift, and go to state 86
    TK_OC_GE  shift, and go to state 87
    '<'       shift, and go to state 88
    '>'       shift, and go to state 89

    $default  reduce using rule 44 (equality_expr)


State 60

   47 relational_expr: add_sub_expr •
   53 add_sub_expr: add_sub_expr • '+' mult_div_mod_expr
   54             | add_sub_expr • '-' mult_div_mod_expr

    '+'  shift, and go to state 90
    '-'  shift, and go to state 91

    $default  reduce using rule 47 (relational_expr)


State 61

   52 add_sub_expr: mult_div_mod_expr •
   56 mult_div_mod_expr: mult_div_mod_expr • '*' unary_expr
   57                  | mult_div_mod_expr • '/' unary_expr
   58                  | mult_div_mod_expr • '%' unary_expr

    '*'  shift, and go to state 92
    '/'  shift, and go to state 93
    '%'  shift, and go to state 94

    $default  reduce using rule 52 (add_sub_expr)


State 62

   55 mult_div_mod_expr: unary_expr •

    $default  reduce using rule 55 (mult_div_mod_expr)


State 63

   59 unary_expr: primary_expr •

    $default  reduce using rule 59 (unary_expr)


State 64

   30 function_call: TK_IDENTIFICADOR '(' • arg_list ')'
   31              | TK_IDENTIFICADOR '(' • ')'

    TK_IDENTIFICADOR  shift, and go to state 46
    TK_LIT_INT        shift, and go to state 47
    TK_LIT_FLOAT      shift, and go to state 48
    TK_LIT_FALSE      shift, and go to state 49
    TK_LIT_TRUE       shift, and go to state 50
    '('               shift, and go to state 51
    ')'               shift, and go to state 95
    '!'               shift, and go to state 52
    '-'               shift, and go to state 53

    function_call      go to state 54
    arg_list           go to state 96
    arg                go to state 97
    expr               go to state 98
    logical_or_expr    go to state 56
    logical_and_expr   go to state 57
    equality_expr      go to state 58
    relational_expr    go to state 59
    add_sub_expr       go to state 60
    mult_div_mod_expr  go to state 61
    unary_expr         go to state 62
    primary_expr       go to state 63


State 65

   29 attrib: TK_IDENTIFICADOR '=' • expr

    TK_IDENTIFICADOR  shift, and go to state 46
    TK_LIT_INT        shift, and go to state 47
    TK_LIT_FLOAT      shift, and go to state 48
    TK_LIT_FALSE      shift, and go to state 49
    TK_LIT_TRUE       shift, and go to state 50
    '('               shift, and go to state 51
    '!'               shift, and go to state 52
    '-'               shift, and go to state 53

    function_call      go to state 54
    expr               go to state 99
    logical_or_expr    go to state 56
    logical_and_expr   go to state 57
    equality_expr      go to state 58
    relational_expr    go to state 59
    add_sub_expr       go to state 60
    mult_div_mod_expr  go to state 61
    unary_expr         go to state 62
    primary_expr       go to state 63


State 66

   10 list_vars: list_vars • ',' TK_IDENTIFICADOR
   28 local_var_dec: type list_vars •

    ','  shift, and go to state 25

    $default  reduce using rule 28 (local_var_dec)


State 67

   19 body: '{' command_list '}' •

    $default  reduce using rule 19 (body)


State 68

   21 command_list: command_list command •

    $default  reduce using rule 21 (command_list)


State 69

   22 command: local_var_dec ';' •

    $default  reduce using rule 22 (command)


State 70

   23 command: attrib ';' •

    $default  reduce using rule 23 (command)


State 71

   27 command: function_call ';' •

    $default  reduce using rule 27 (command)


State 72

   26 command: return ';' •

    $default  reduce using rule 26 (command)


State 73

   24 command: conditional ';' •

    $default  reduce using rule 24 (command)


State 74

   25 command: while ';' •

    $default  reduce using rule 25 (command)


State 75

   13 header: '(' ')' TK_OC_GE type '!' • TK_IDENTIFICADOR

    TK_IDENTIFICADOR  shift, and go to state 100


State 76

   12 header: '(' param_list ')' TK_OC_GE type • '!' function_name

    '!'  shift, and go to state 101


State 77

   36 conditional: TK_PR_IF '(' expr • ')' '{' command_list '}'
   37            | TK_PR_IF '(' expr • ')' '{' command_list '}' TK_PR_ELSE '{' command_list '}'

    ')'  shift, and go to state 102


State 78

   38 while: TK_PR_WHILE '(' expr • ')' '{' command_list '}'

    ')'  shift, and go to state 103


State 79

   68 primary_expr: '(' expr • ')'

    ')'  shift, and go to state 104


State 80

   61 unary_expr: '!' primary_expr •

    $default  reduce using rule 61 (unary_expr)


State 81

   60 unary_expr: '-' primary_expr •

    $default  reduce using rule 60 (unary_expr)


State 82

   41 logical_or_expr: logical_or_expr TK_OC_OR • logical_and_expr

    TK_IDENTIFICADOR  shift, and go to state 46
    TK_LIT_INT        shift, and go to state 47
    TK_LIT_FLOAT      shift, and go to state 48
    TK_LIT_FALSE      shift, and go to state 49
    TK_LIT_TRUE       shift, and go to state 50
    '('               shift, and go to state 51
    '!'               shift, and go to state 52
    '-'               shift, and go to state 53

    function_call      go to state 54
    logical_and_expr   go to state 105
    equality_expr      go to state 58
    relational_expr    go to state 59
    add_sub_expr       go to state 60
    mult_div_mod_expr  go to state 61
    unary_expr         go to state 62
    primary_expr       go to state 63


State 83

   43 logical_and_expr: logical_and_expr TK_OC_AND • equality_expr

    TK_IDENTIFICADOR  shift, and go to state 46
    TK_LIT_INT        shift, and go to state 47
    TK_LIT_FLOAT      shift, and go to state 48
    TK_LIT_FALSE      shift, and go to state 49
    TK_LIT_TRUE       shift, and go to state 50
    '('               shift, and go to state 51
    '!'               shift, and go to state 52
    '-'               shift, and go to state 53

    function_call      go to state 54
    equality_expr      go to state 106
    relational_expr    go to state 59
    add_sub_expr       go to state 60
    mult_div_mod_expr  go to state 61
    unary_expr         go to state 62
    primary_expr       go to state 63


State 84

   45 equality_expr: equality_expr TK_OC_EQ • relational_expr

    TK_IDENTIFICADOR  shift, and go to state 46
    TK_LIT_INT        shift, and go to state 47
    TK_LIT_FLOAT      shift, and go to state 48
    TK_LIT_FALSE      shift, and go to state 49
    TK_LIT_TRUE       shift, and go to state 50
    '('               shift, and go to state 51
    '!'               shift, and go to state 52
    '-'               shift, and go to state 53

    function_call      go to state 54
    relational_expr    go to state 107
    add_sub_expr       go to state 60
    mult_div_mod_expr  go to state 61
    unary_expr         go to state 62
    primary_expr       go to state 63


State 85

   46 equality_expr: equality_expr TK_OC_NE • relational_expr
